--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,15 +4,24 @@
         "аккаунт",
         "аккаута",
         "Ввійти",
+        "Додати",
         "електронної",
+        "Загрузити",
         "Зареєструватись",
         "Зареєструватися",
         "Логін",
+        "Місцевість",
+        "Назва",
         "немає",
+        "Опублікувати",
         "Пароль",
         "Показати",
         "пошти",
         "Реєстрація",
-        "Увійти"
+        "Увійти",
+        "фото",
+        "Ionicons",
+        "Natali",
+        "Romanova"
     ]
 }
