--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,10 @@
         "Реєстрація",
         "Увійти",
         "фото",
+        "Authcheck",
         "Ionicons",
         "Natali",
+        "Publicate",
         "Romanova"
     ]
 }
